test/users/thom/returnGeneric.good
returnGeneric.chpl:5: In function 'foo':
returnGeneric.chpl:5: error: illegal generic return type C
returnGeneric.chpl:6: error: unresolved type specifier 'C()'
returnGeneric.chpl:1: note: candidates are: C(type n)
